Push work from lab. Created images folder Remaned game2 to quiz and added in more html elements Created script.js Added css to Styles.css

--- a/Games/game1.html
+++ b/Games/game1.html
@@ -7,17 +7,22 @@
 	
 	<body>
 		<header>
-			
+			<h2>Game1</h2>
+			<a href="index.html">
+				<img src="" alt="Banner" style="width:50;height:50px;">
+			</a>
 		</header>
 		
+		<hr class = "dividerLine" />
 		
-		<article>
+		<div>
 			
-		</article>
+		</div>
 		
+		<hr class = "dividerLine" />
 		
 		<footer>
-			
+			<p class = "closingP">This was created by Luke Ramage for F28WP</p>
 		</footer>
 	</body>
 </html>
