--- a/Games/game2.html
+++ b/Games/game2.html
@@ -7,17 +7,28 @@
 	
 	<body>
 		<header>
-			
+			<h2>Game2</h2>
+			<a href="index.html">
+				<img src="" alt="Banner" style="width:50;height:50px;">
+			</a>
 		</header>
 		
+		<hr class = "dividerLine" />
 		
-		<article>
-			
-		</article>
+		<div>
+			<h3>Question?</h3> 
+			<h3>Score</h3>
+			<button>Answer1</button>
+			<button>Answer2</button>
+			<button>Answer3</button>
+			<button>Answer4</button>
+			<button>Start</button>
+		</div>
 		
+		<hr class = "dividerLine" />
 		
 		<footer>
-			
+			<p class = "closingP">This was created by Luke Ramage for F28WP</p>
 		</footer>
 	</body>
 </html>
