--- a/Games/index.html
+++ b/Games/index.html
@@ -7,12 +7,15 @@
 	
 	<body>
 		<header>
-			<h3>Home</h3>
-			<img src="" alt="Banner" style="width:50;height:50px;">
+			<h2>Home</h2>
+			<a href="index.html">
+				<img src="" alt="Banner" style="width:50;height:50px;">
+			</a>
 		</header>
 		
+		<hr class = "dividerLine" />
 		
-		<article>
+		<div>
 			<a href="game1.html">
 				<img src="" alt="Game1" style="width:50;height:50px;">
 			</a>
@@ -20,11 +23,12 @@
 				<img src="" alt="Game2" style="width:50;height:50px;">
 			</a>
 			
-		</article>
+		</div>
 		
+		<hr class = "dividerLine" />
 		
 		<footer>
-			
+			<p class = "closingP">This was created by Luke Ramage for F28WP</p>
 		</footer>
 	</body>
 </html>
