Changed name of game 2 to quiz

--- a/Games/Quiz.html
+++ b/Games/Quiz.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-		<title>Game2</title>
+		<title>Quiz</title>
         <link rel="stylesheet" href="Styles.css">
 	</head>
 	
 	<body>
 		<header>
-			<h2>Game2</h2>
+			<h2>Quiz</h2>
 			<a href="index.html">
 				<img src="" alt="Banner" style="width:50;height:50px;">
 			</a>
