Pushing so can work on this remotely Changes: added Placeholder.jpg moved script.js into the correct place added more css to reformate html elements in quiz.html

--- a/Games/Quiz.html
+++ b/Games/Quiz.html
@@ -3,32 +3,34 @@
     <head>
 		<title>Quiz</title>
         <link rel="stylesheet" href="Styles.css">
+		<script src="Script.js"></script>	
 	</head>
 	
 	<body>
 		<header>
 			<h2>Quiz</h2>
 			<a href="index.html">
-				<img src="" alt="Banner" style="width:50;height:50px;">
+				<img class = "banner" src="images/Placeholder.jpg" alt="Banner">
 			</a>
 		</header>
 		
-		<hr class = "dividerLine" />
+		<hr/>
 		
 		<div>
-			<h3>Question?</h3> 
-			<h3>Score</h3>
-			<button>Answer1</button>
-			<button>Answer2</button>
-			<button>Answer3</button>
-			<button>Answer4</button>
-			<button>Start</button>
+			<h1 id = "question">Question?</h1> 
+			<h3 id = "score">Score</h3>
+			<button id = "startButton">Start</button>
+			<button class = "answerButton">Answer1</button>
+			<button class = "answerButton">Answer2</button>
+			<button class = "answerButton">Answer3</button>
+			<button class = "answerButton">Answer4</button>
+			
 		</div>
 		
-		<hr class = "dividerLine" />
+		<hr/>
 		
 		<footer>
-			<p class = "closingP">This was created by Luke Ramage for F28WP</p>
+			<p class = "footer">This was created by Luke Ramage for F28WP</p>
 		</footer>
 	</body>
 </html>
