--- a/Games/game1.html
+++ b/Games/game1.html
@@ -3,26 +3,27 @@
     <head>
 		<title>Game1</title>
         <link rel="stylesheet" href="Styles.css">
+		<script src="Script.js"></script>	
 	</head>
 	
 	<body>
 		<header>
 			<h2>Game1</h2>
 			<a href="index.html">
-				<img src="" alt="Banner" style="width:50;height:50px;">
+				<img class = "banner" src="images/Placeholder.jpg" alt="Banner">
 			</a>
 		</header>
 		
-		<hr class = "dividerLine" />
+		<hr/>
 		
 		<div>
 			
 		</div>
 		
-		<hr class = "dividerLine" />
+		<hr/>
 		
 		<footer>
-			<p class = "closingP">This was created by Luke Ramage for F28WP</p>
+			<p class = "footer">This was created by Luke Ramage for F28WP</p>
 		</footer>
 	</body>
 </html>
