--- a/Games/index.html
+++ b/Games/index.html
@@ -9,26 +9,30 @@
 		<header>
 			<h2>Home</h2>
 			<a href="index.html">
-				<img src="" alt="Banner" style="width:50;height:50px;">
+				<img class = "banner" src="images/Placeholder.jpg" alt="Banner">
 			</a>
 		</header>
 		
-		<hr class = "dividerLine" />
+		<hr/>
 		
-		<div>
-			<a href="game1.html">
-				<img src="" alt="Game1" style="width:50;height:50px;">
-			</a>
-			<a href="game2.html">
-				<img src="" alt="Game2" style="width:50;height:50px;">
-			</a>
-			
+		<div class="row">
+			<div class="column">
+				<a href="game1.html">
+					<img class = "gameLink" src="images/Placeholder.jpg" alt="Game1">
+				</a>
+			</div>
+
+			<div class="column">
+				<a href="Quiz.html">
+					<img class = "gameLink" src="images/Placeholder.jpg" alt="Quiz">
+				</a>
+			</div>
 		</div>
 		
-		<hr class = "dividerLine" />
+		<hr/>
 		
 		<footer>
-			<p class = "closingP">This was created by Luke Ramage for F28WP</p>
+			<p class = "footer">This was created by Luke Ramage for F28WP</p>
 		</footer>
 	</body>
 </html>
