Created Script to run a quiz taking a question and answers, and displaying them to the user in html elements.

--- a/Games/Quiz.html
+++ b/Games/Quiz.html
@@ -1,36 +1,38 @@
 <!DOCTYPE html>
 <html>
-    <head>
-		<title>Quiz</title>
-        <link rel="stylesheet" href="Styles.css">
-		<script src="Script.js"></script>	
-	</head>
-	
-	<body>
-		<header>
-			<h2>Quiz</h2>
-			<a href="index.html">
-				<img class = "banner" src="images/Placeholder.jpg" alt="Banner">
+
+<head>
+	<title>Quiz</title>
+	<link rel="stylesheet" href="Styles.css">
+	<script src="script.js"></script>
+</head>
+
+<body>
+	<header>
+		<h2>Quiz</h2>
+		<a href="index.html">
+			<img class = "banner" src="images/Placeholder.jpg" alt="Banner">
 			</a>
-		</header>
-		
-		<hr/>
-		
-		<div>
-			<h1 id = "question">Question?</h1> 
-			<h3 id = "score">Score</h3>
-			<button id = "startButton">Start</button>
-			<button class = "answerButton">Answer1</button>
-			<button class = "answerButton">Answer2</button>
-			<button class = "answerButton">Answer3</button>
-			<button class = "answerButton">Answer4</button>
-			
-		</div>
-		
-		<hr/>
-		
-		<footer>
-			<p class = "footer">This was created by Luke Ramage for F28WP</p>
-		</footer>
-	</body>
+	</header>
+
+	<hr />
+
+	<div>
+		<h1 id="question">Press start to start quiz</h1>
+		<h3 id="score">0/0</h3>
+		<button id = "startButton">Start</button>
+		<button id = "answer1" class = "answerButton"></button>
+		<button id = "answer2" class = "answerButton"></button>
+		<button id = "answer3"class = "answerButton"></button>
+		<button id = "answer4" class = "answerButton"></button>
+
+	</div>
+
+	<hr />
+
+	<footer>
+		<p class="footer">This was created by Luke Ramage for F28WP</p>
+	</footer>
+</body>
+
 </html>
