--- a/Games/Quiz.html
+++ b/Games/Quiz.html
@@ -3,11 +3,12 @@
 
 <head>
 	<title>Quiz</title>
-	<link rel="stylesheet" href="Styles.css">
-	<script src="script.js"></script>
+	<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
+	<script src="quizScript.js"></script>
+
 	<header>
 		<h2>Quiz</h2>
 		<a href="index.html">
