--- a/Games/index.html
+++ b/Games/index.html
@@ -23,7 +23,7 @@
 			</div>
 
 			<div class="column">
-				<a href="Quiz.html">
+				<a href="quiz.html">
 					<img class = "gameLink" src="images/Placeholder.jpg" alt="Quiz">
 				</a>
 			</div>
