--- a/Games/game1.html
+++ b/Games/game1.html
@@ -2,8 +2,7 @@
 <html>
     <head>
 		<title>Game1</title>
-        <link rel="stylesheet" href="Styles.css">
-		<script src="Script.js"></script>	
+        <link rel="stylesheet" href="styles.css">
 	</head>
 	
 	<body>
