--- a/Games/index.html
+++ b/Games/index.html
@@ -17,7 +17,7 @@
 		
 		<div class="row">
 			<div class="column">
-				<a href="game1.html">
+				<a href="higherOrLower.html">
 					<img class = "gameLink" src="images/Placeholder.jpg" alt="Game1">
 				</a>
 			</div>
